.metadata/.plugins/org.eclipse.cdt.ui/beeVMTests.build.log
16:21:13 **** Incremental Build of configuration Debug for project beevmTests ****
Info: Internal Builder is used for build
g++ "-ID:\\CPPEnv\\beevmTests\\beevmTests\\cute" "-ID:\\CPPEnv\\beevmTests\\beevmTests\\boost" -O0 -g3 -Wall -c -fmessage-length=0 -o "DataStructures\\VMMemory.o" "..\\DataStructures\\VMMemory.cpp" 
..\DataStructures\VMMemory.cpp:50:2: warning: multi-line comment [-Wcomment]
  // .data:10026058         ObjectFlag_reserved1 or ObjectFlag_zeroTermOrNamed or ObjectFlag_notIndexed,\
  ^
..\DataStructures\VMMemory.cpp: In function 'void _commit(ulong, ulong)':
..\DataStructures\VMMemory.cpp:234:75: error: expected primary-expression before ')' token
  (ulong *) VirtualAlloc((void *) limit, delta, MEM_COMMIT, PAGE_READWRITE,);
                                                                           ^
..\DataStructures\VMMemory.cpp: In function 'ulong _asOop(ulong*)':
..\DataStructures\VMMemory.cpp:324:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
..\DataStructures\VMMemory.cpp: In function 'ulong _oop(ulong*)':
..\DataStructures\VMMemory.cpp:327:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
..\DataStructures\VMMemory.cpp: In function 'long unsigned int memoryAt(long unsigned int)':
..\DataStructures\VMMemory.cpp:347:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^

16:21:13 Build Finished (took 584ms)

